--- a/myblog/config.toml
+++ b/myblog/config.toml
@@ -14,7 +14,7 @@ googleAnalytics = ""      # UA-XXXXXXXX-X
 copyright = ""            # default: author.name ↓        # 默认为下面配置的author.name ↓
 
 [author]                  # essential                     # 必需
-  name = "张豪"
+  name = "ahow"
 
 [sitemap]                 # essential                     # 必需
   changefreq = "weekly"
@@ -49,7 +49,7 @@ copyright = ""            # default: author.name ↓        # 默认为下面配
   since = "2018-8-24"            # Site creation time          # 站点建立时间
 
   # site info (optional)                                  # 站点信息（可选，不需要的可以直接注释掉）
-  logoTitle = "zhanghao"        # default: the title value    # 默认值: 上面设置的title值
+  logoTitle = "ahow"        # default: the title value    # 默认值: 上面设置的title值
   keywords = ["Hugo", "theme","even"]
   description = "zhanghao's blog"
 
